[package]
name = "cargo-like-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A colletion of utils to build CLIs with an output style and a behaviour similar to `cargo`"

[dependencies]
libc = "0.2.149"
anstream = "0.6.4"
anstyle = "1.0.4"
anyhow = "1"
url = "2.4.1"
supports-hyperlinks = "2.1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
remove_dir_all = "0.8.2"
tracing = { version = "0.1.40", features = [] }
config = { version = "0.13.4", features = [] }
windows-sys = { version = "0.52.0", features = [] }
fs-err = "2.11.0"
