[package]
name = "cargo-like-utils"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A colletion of utils to build CLIs with an output style and a behaviour similar to `cargo`"

[dependencies]
libc = "0.2.149"
anstream = "0.6.4"
anstyle = "1.0.4"
anyhow = "1"
url = "2.4.1"
supports-hyperlinks = "3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
remove_dir_all = "0.8.2"
tracing = { version = "0.1.40", features = [] }
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Threading"] }
fs-err = "2.11.0"
