[package]
name = "cargo-like-utils"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A colletion of utils to build CLIs with an output style and a behaviour similar to `cargo`"

[dependencies]
libc = "0.2.169"
anstream = "0.6.18"
anstyle = "1.0.10"
anyhow = "1"
url = "2.5.4"
supports-hyperlinks = "3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
remove_dir_all = "1.0.0"
tracing = { version = "0.1.41", features = [] }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Threading"] }
fs-err = "3.1.0"
